# financial_modelling_agent

./: .gitignore  README.md  pyproject.toml
src/solar_finance_agent/: __init__.py  agent.py  cli.py  model.py  server.py  sheet_export.py
tests/: test_agent.py  test_model.py  test_server.py
