[project]
name = "solar-finance-agent"
version = "0.1.0"
description = "CLI agent for building solar project financial models and exporting to Google Sheets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "python-multipart>=0.0.9",
  "gspread>=6.0.0",
  "google-auth>=2.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
solar-finance-agent = "solar_finance_agent.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
